Add the set token endpoint
Add a post request on /users/{userd_id} passing strava_token in query. That allow to set the Strava token from the flask-app.
